// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sass builds with rtl support 1`] = `
".imported-rtl {
  float: left;
}

.swap-for-rtl {
  float: left;
  margin-right: 2px;
  padding: 1px 2px 3px 4px;
  left: 5px;
}

/*# sourceMappingURL=main.css.map */"
`;

exports[`sass builds with rtl support for nested files 1`] = `
".swap-for-rtl {
  float: left;
  margin-right: 2px;
  padding: 1px 2px 3px 4px;
  left: 5px;
}

/*# sourceMappingURL=nested.css.map */"
`;
